<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.psuti.pe</groupId>
    <artifactId>fake-os-desktop</artifactId>
    <version>0.0.1</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Apache Batik для перекодирования SVG изображений -->
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-all</artifactId>
            <version>1.15</version>
        </dependency>
        <!-- Расширения для Swing GUI toolkit в виде новых и улучшенных компонентов -->
        <!--
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swingx</artifactId>
            <version>1.6.1</version>
        </dependency>
        -->
    </dependencies>

    <build>
        <!-- Перечисление ресурсов, которые должны попасть в сборку -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <!-- Task Bar Resources -->
                    <include>system-shutdown.svg</include>
                    <include>system-lock-screen.svg</include>
                    <include>start.svgz</include>
                    <include>audio-volume-muted.svg</include>
                    <include>edit-paste.svg</include>
                    <include>systemsettings.svg</include>
                    <include>user-trash.svg</include>

                    <!-- Programs Resources -->
                    <include>dolphin.svg</include>

                    <!-- Title Bar Resources -->
                    <include>window-close.svg</include>
                    <include>window-close-black.svg</include>
                    <include>window-close-vinous.svg</include>
                    <include>window-restore.svg</include>
                    <include>window-restore-black.svg</include>
                    <include>window-restore-gray.svg</include>
                    <include>go-down.svg</include>
                    <include>go-down-black.svg</include>
                    <include>go-down-gray.svg</include>
                    <include>go-up.svg</include>
                    <include>go-up-black.svg</include>
                    <include>go-up-gray.svg</include>

                    <!-- Dolphin Resources -->
                    <include>go-previous.svg</include>
                    <include>go-next.svg</include>
                    <include>view-list-icons.svg</include>
                    <include>view-list-details.svg</include>
                    <include>view-list-tree.svg</include>
                    <include>view-right-new.svg</include>
                    <include>edit-find.svg</include>
                    <include>application-menu.svg</include>
                    <include>dolphin/desktop.svg</include>
                    <include>dolphin/docs.svg</include>
                    <include>dolphin/downloads.svg</include>
                    <include>dolphin/home.svg</include>
                    <include>dolphin/images.svg</include>
                    <include>dolphin/music.svg</include>
                    <include>dolphin/trash.svg</include>
                    <include>dolphin/video.svg</include>
                    <include>dolphin/folder.svg</include>
                    <include>dolphin/file.svg</include>

                    <!-- Fonts -->
                    <include>Hack-Regular.ttf</include>
                    <include>NotoSans-Regular.ttf</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <!-- Плагин для создания запускаемого джарника в ходе сборки проекта -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
                        <manifest>
                            <mainClass>edu.psuti.pe.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>